--- a/Utilizando Recursos Nativos do Android/Fotos/app/build.gradle
+++ b/Utilizando Recursos Nativos do Android/Fotos/app/build.gradle
@@ -1,11 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
 }
 
 android {
     compileSdk 30
+
+    buildFeatures {
+        viewBinding true
+    }
 
     defaultConfig {
         applicationId "com.example.fotosbootcamp"
